ci/charts/azure-pipelines/ingress-example.yaml
apiVersion: networking.k8s.io/v1
# or you can use v1beta1:
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: my-host.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stubby4j
                port:
                  number: 8080
          # this is extensions/v1beta1 syntax:
          #- path: /api/actuator
          #  backend:
          #    serviceName: stubby
          #    servicePort: 80
