ci/charts/azure-pipelines/ingress-v1beta-sample.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-service-ingress
  annotations:
    cert-manager.io/issuer: "LetsEncrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - my-host.com
    secretName: tls-secret
  rules:
  - host: my-host.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nextjs
          servicePort: 80
      - path: /api/actuator
        backend:
          serviceName: nextjs
          servicePort: 80          
      - path: /api
        backend:
          serviceName: expressJs
          servicePort: 80
      - path: /storybook
        backend:
          serviceName: storybook
          servicePort: 80
